

public class CharacterAnimationConventions 
{
    public const string ForwardSpeedParameterName = "FowardSpeed";
    public const string StrafeSpeedParameterName = "StrafeSpeed";
    public const string ActionsParameterName = "ActionType";
    public const string LookAngleParameterName = "LookAngle";
    public const string HitTypeParameterName = "HitType";
}
